2003-04-15  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/dl-machine.h (elf_machine_rela): Avoid
	checking R_PPC_RELATIVE, R_PPC_NONE and whether relocation is
	against local symbol in conflict processing.

2003-04-15  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/bits/atomic.h
	[__powerpc64] (__arch_compare_and_exchange_val_64_acq): Define.
	[! __powerpc64] (__arch_compare_and_exchange_val_64_acq): Defined
	as abort stub.
	(__arch_compare_and_exchange_val_32_acq): Define.
	(atomic_compare_and_exchange_val_acq): Define.

2003-04-15  Ulrich Drepper  <drepper@redhat.com>

	* include/atomic.h: Pretty printing.

2003-04-14  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfscanf.c: Add casts to avoid warnings.

2003-04-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/i486/bits/atomic.h: Rename LOCK to LOCK_PREFIX.
	* sysdeps/x86_64/bits/atomic.h: Likewise.

2003-04-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h: Change PUSHARGS_1 and
	POPARGS_1 to emit labels for the mov instructions.

2003-04-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h (ret_NOERRNO): Define.

2003-04-14  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/unwind-dw2.c (_Unwind_GetCFA): Add a cast to silence
	compiler warning.

	* sysdeps/generic/unwind-pe.h: Fix decl hacks broken in merge.

2003-04-14  Ulrich Drepper  <drepper@redhat.com>

	* string/strxfrm.c (STRXFRM): Terminate rulearr at correct
	position.  Reported by jreiser@BitWagon.com.

2003-04-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/unwind-dw2-fde.c: Update from recent gcc version.
	* sysdeps/generic/unwind-dw2-fde.h: Likewise.
	* sysdeps/generic/unwind-dw2.c: Likewise.
	* sysdeps/generic/unwind-pe.h: Likewise.

2003-04-13  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/profil-counter: New.
	* sysdeps/unix/sysv/linux/mips/sigcontextinfo.h: Port to n32/n64.