@@ -1,4 +1,4 @@
-2003-04-15  Petter Reinholdtsen <pere@hungry.com>
+2003-04-15  Petter Reinholdtsen  <pere@hungry.com>
 
 	* locales/ar_SD [LC_MONETARY]: Use international currency symbol
 	'SDD' for Sudan.
